--- a/templates/einvoice/base_index.html
+++ b/templates/einvoice/base_index.html
@@ -1,7 +1,7 @@
 {% extends "einvoice/base.html" %}
 
 {% block page %}
-<div id="page-wrapper">
+<div id="page-wrapper" class="col-md-12">
 <div class="row">
     <div class="col-lg-12">
         <h1 class="page-header">Dashboard</h1>
