--- a/templates/einvoice/base.html
+++ b/templates/einvoice/base.html
@@ -164,13 +164,13 @@
                     <a href="#"><i class="fa fa-user fa-fw"></i>帳號管理<span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
                         <li>
-                            <a href="flot.html">新增群一帳號</a>
+                            <a href="{{ EINVOICE_URL }}group1/add/" ><i class="fa fa-caret-right fa-fw"></i>新增群一帳號</a>
                         </li>
                         <li>
-                            <a href="flot.html">新增群二帳號</a>
+                            <a href="flot.html"><i class="fa fa-caret-right fa-fw"></i>新增群二帳號</a>
                         </li>
                         <li>
-                            <a href="flot.html">新增一般帳號</a>
+                            <a href="flot.html"><i class="fa fa-caret-right fa-fw"></i>新增一般帳號</a>
                         </li>
                     </ul>
                     <!-- /.nav-second-level -->
@@ -179,16 +179,13 @@
                     <a href="#"><i class="fa fa-sitemap fa-fw"></i>組織管理<span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
                         <li>
-                            <a href="flot.html" >新增群一</a>
+                            <a href="{{ EINVOICE_URL }}group1/add/" ><i class="fa fa-caret-right fa-fw"></i>新增群一</a>
                         </li>
                         <li>
-                            <a href="flot.html">新增群二</a>
+                            <a href="{{ EINVOICE_URL }}terminal/add/" ><i class="fa fa-caret-right fa-fw"></i>新增群二</a>
                         </li>
                         <li>
-                            <a href="{{ EINVOICE_URL }}terminal/add/">新增店家</a>
-                        </li>
-                        <li>
-                            <a href="morris.html"></a>
+                            <a href="{{ EINVOICE_URL }}terminal/add/" ><i class="fa fa-caret-right fa-fw"></i>新增店家</a>
                         </li>
                     </ul>
                     <!-- /.nav-second-level -->
