--- a/static/css/css/einvoice.css
+++ b/static/css/css/einvoice.css
@@ -29,6 +29,11 @@
     transition: width 0.3s ease, margin 0.3s ease;
 }
 
-.fa {
-    margin-right: 5px;
+#side-menu li i{
+    margin-right: 10px;
+    color: #FF8800;
+}
+
+.ggg {
+    margin-right: 10px;
 }
