--- a/templates/einvoice/base_index.html
+++ b/templates/einvoice/base_index.html
@@ -2,13 +2,68 @@
 
 {% block page %}
 <div id="page-wrapper" class="col-md-12">
-<div class="row">
-    <div class="col-lg-12">
-        <h1 class="page-header">Dashboard</h1>
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Dashboard</h1>
+        </div>
+        {% if messages %}
+        <div class="col-lg-12">
+            <div class="alert alert-success text-center">
+                {% for message in messages %}
+                <label {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</label>
+                {% endfor %}
+            </div>
+        </div>
+        {% endif %}
+        <!--{% if messege %}-->
+        <!--<div class="col-lg-12">-->
+        <!--<div class="alert alert-success text-center">-->
+            <!--{{ messege }}-->
+        <!--</div>-->
+<!--</div>-->
+        <!--{% endif %}-->
+        <div class="col-lg-12">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    群一資訊
+                </div>
+                <div class="panel-body">
+                    <table class="table table-striped table-bordered table-hover" id="dataTables-example">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>統一編號</th>
+                                <th>Platform(s)</th>
+                                <th>Engine version</th>
+                                <th>CSS grade</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for obj in info %}
+                            <tr>
+                                <td>{{ obj.name }}</td>
+                                <td>{{ obj.ubn }}</td>
+                                <td>Win 95+</td>
+                                <td class="center">4</td>
+                                <td class="center">X</td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                <!-- /.table-responsive -->
+                </div>
+            <!-- /.panel-body -->
+            </div>
+        </div>
     </div>
-    <!-- /.col-lg-12 -->
 </div>
-<!-- /.row -->
-<!-- /.row -->
-</div>
+<!-- /#page-wrapper -->
+{% load staticfiles %}
+<script src="{% static 'css/sb/js/plugins/dataTables/jquery.dataTables.js' %}" ></script>
+<script src="{% static 'css/sb/js/plugins/dataTables/dataTables.bootstrap.js' %}" ></script>
+<script>
+    $(document).ready(function() {
+        $('#dataTables-example').dataTable();
+    });
+</script>
 {% endblock %}
