--- a/templates/einvoice/base_register-staff.html
+++ b/templates/einvoice/base_register-staff.html
@@ -3,54 +3,75 @@
 {% block page %}
 <div id="page-wrapper" class="col-md-12">
     <div class="row">
-        {% if form.errors.items %}
-        <!-- error panel-->
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="panel panel-default">
-                    <div class="panel-body has-error">
-                        <p class="control-label">錯誤訊息: </p>
-                        {% for field, errors in form.errors.items %}
-                        {% for error in errors %}
-                        <p class="control-label">{{ field }}: {{ error }}</p>
-                        {% endfor %}
-                        {% endfor %}
-                    </div>
+        <div class="col-lg-12">
+            <h1 class="page-header">新增一般權限</h1>
+        </div>
+    </div>
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+
+    {% if user_form.errors.items %}
+    <!-- error panel-->
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-default">
+                <div class="panel-body has-error">
+                    <p class="control-label">錯誤訊息: </p>
+                    {% for field, errors in user_form.errors.items %}
+                    {% for error in errors %}
+                    <p class="control-label">{{ field }}: {{ error }}</p>
+                    {% endfor %}
+                    {% endfor %}
                 </div>
             </div>
         </div>
-        {% endif %}
+    </div>
+    {% endif %}
+    <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">新增一般權限</h1>
-            <form action="" method="post">
-                {% csrf_token %}
-                <!--{{ form }}-->
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label class="control-label" for="id_username" >帳號</label>
-                            <input id="id_username" name="username" class="form-control">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <form action="" method="post">
+                        {% csrf_token %}
+                        <!--{{ form }}-->
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label class="control-label" for="id_username" >帳號</label>
+                                    <input id="id_user-username" name="user-username" class="form-control">
+                                </div>
+                                <div id="id_ubn_div" class="form-group">
+                                    <label class="control-label" for="id_email">E-mail</label>
+                                    <input id="id_user-email" name="user-email" class="form-control">
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label class="control-label" for="id_password1" >密碼</label>
+                                    <input id="id_user-password1" name="user-password1" class="form-control">
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label" for="id_password2" >密碼確認</label>
+                                    <input id="id_user-password2" name="user-password2" class="form-control">
+                                </div>
+                            </div>
                         </div>
-                        <div id="id_ubn_div" class="form-group">
-                            <label class="control-label" for="id_email">E-mail</label>
-                            <input id="id_email" name="email" class="form-control">
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label class="control-label" for="id_password1" >密碼</label>
-                            <input id="id_password1" name="password1" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label" for="id_password2" >密碼確認</label>
-                            <input id="id_password2" name="password2" class="form-control">
-                        </div>
-                    </div>
+                            <input type="submit" value="OK">
+                    </form>
                 </div>
-                <input type="submit" value="OK">
-            </form>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
             <table class="tree">
                 <tr class="treegrid-1">
-                    <td>Root node</td><td>Additional info</td>
+                    <td>Root node</td><td><input type="checkbox" value=""></td>
                 </tr>
                 <tr class="treegrid-2 treegrid-parent-1">
                     <td>Node 1-1</td><td>Additional info</td>
