--- a/static/css/css/einvoice.css
+++ b/static/css/css/einvoice.css
@@ -13,8 +13,17 @@
     font-size: 18px;
     line-height: 20px;
     margin-right:10px;
-    /*border: 4px solid;*/
+    border: 0px solid;
+    background-color : transparent;
     /*border-radius: 10px;*/
+}
+
+.sidebar-btn:focus {
+    outline: 0;
+}
+
+.sidebar-btn:hover {
+    background-color: #F89900;
 }
 
 .hidden {
