--- a/templates/einvoice/base_addterminal.html
+++ b/templates/einvoice/base_addterminal.html
@@ -63,6 +63,12 @@
                                     {{ form.terminal_no }}
                                 </div>
                             </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label>地址</label>
+                                    {{ form.address }}
+                                </div>
+                            </div>
                         </div>
                         <button type="submit" class="btn btn-primary btn-lg">儲存資料</button>
                     </form>
