--- a/templates/einvoice/base_register-staff.html
+++ b/templates/einvoice/base_register-staff.html
@@ -36,7 +36,7 @@
         <div class="col-lg-12">
             <div class="panel panel-default">
                 <div class="panel-body">
-                    <form action="" method="post">
+                    <form id="staff-form" action="" method="post">
                         {% csrf_token %}
                         <!--{{ form }}-->
                         <div class="row">
@@ -60,8 +60,30 @@
                                     <input id="id_user-password2" name="user-password2" class="form-control">
                                 </div>
                             </div>
+                            <div class="col-md-12">
+                                <div class="tree">
+                                    <ul>
+                                        <li>
+                                            <span><i class=""></i>雲端生活家</span>
+                                            <ul>
+                                                <li>
+                                                    <span><i class=""></i>北區</span>
+                                                    <ul>
+                                                        <li>
+                                                            <span class="leaf"><i class="fa fa-home fa-fw"></i>雲端南港店</span>
+                                                            <input type="hidden" name="lifeplus" value="true">
+                                                        </li>
+                                                    </ul>
+                                                </li>
+                                                <li>
+                                                    <span class="leaf"><i class="fa fa-home fa-fw"></i>台北車站</span>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                    </ul>
+                                </div>
                         </div>
-                            <input type="submit" value="OK">
+                            <input id="submit-button" type="submit" value="OK">
                     </form>
                 </div>
             </div>
@@ -69,30 +91,54 @@
     </div>
     <div class="row">
         <div class="col-lg-12">
-            <table class="tree">
-                <tr class="treegrid-1">
-                    <td>Root node</td><td><input type="checkbox" value=""></td>
-                </tr>
-                <tr class="treegrid-2 treegrid-parent-1">
-                    <td>Node 1-1</td><td>Additional info</td>
-                </tr>
-                <tr class="treegrid-3 treegrid-parent-1">
-                    <td>Node 1-2</td><td>Additional info</td>
-                </tr>
-                <tr class="treegrid-4 treegrid-parent-3">
-                    <td>Node 1-2-1</td><td>Additional info</td>
-                </tr>
-            </table>
+            <div class="tree">
+                <ul>
+                    <li>
+                        <span><i class=""></i>雲端生活家</span>
+                        <ul>
+                            <li>
+                                <span><i class=""></i>北區</span>
+                                <ul>
+                                    <li>
+                                        <span class="leaf"><i class="fa fa-home fa-fw"></i>雲端南港店</span>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <span class="leaf"><i class="fa fa-home fa-fw"></i>台北車站</span>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <!--<table class="tree">-->
+                <!--<tr class="treegrid-1">-->
+                    <!--<td>Root node</td><td><input type="checkbox" value=""></td>-->
+                <!--</tr>-->
+                <!--<tr class="treegrid-2 treegrid-parent-1">-->
+                    <!--<td>Node 1-1</td><td>Additional info</td>-->
+                <!--</tr>-->
+                <!--<tr class="treegrid-3 treegrid-parent-1">-->
+                    <!--<td>Node 1-2</td><td>Additional info</td>-->
+                <!--</tr>-->
+                <!--<tr class="treegrid-4 treegrid-parent-3">-->
+                    <!--<td>Node 1-2-1</td><td>Additional info</td>-->
+                <!--</tr>-->
+            <!--</table>-->
         </div>
         <!-- /.col-lg-12 -->
     </div>
 </div>
 {% load staticfiles %}
-<script src="{% static 'css/tree/js/jquery.treegrid.js' %}" ></script>
-<link rel="stylesheet" type="text/css" href="{% static 'css/tree/css/jquery.treegrid.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'einvoice/newtree/css/tree.css' %}" />
+<!--<link rel="stylesheet" type="text/css" href="{% static 'css/css/checkbox.css' %}" />-->
+<script src="{% static 'einvoice/newtree/js/tree.js' %}" ></script>
+<script src="{% static 'einvoice/js/base_register-staff.js' %}" ></script>
+<!--<script src="{% static 'css/tree/js/jquery.treegrid.js' %}" ></script>-->
+<!--<link rel="stylesheet" type="text/css" href="{% static 'css/tree/css/jquery.treegrid.css' %}" />-->
 <!--<link rel="stylesheet" type="text/css" href="{% static 'css/tree/css/styles.css' %}" />-->
 
-<script type="text/javascript">
-    $('.tree').treegrid();
-</script>
+<!--<script type="text/javascript">-->
+    <!--$('.tree').treegrid();-->
+<!--</script>-->
 {% endblock %}
