--- a/templates/einvoice/login.html
+++ b/templates/einvoice/login.html
@@ -12,10 +12,10 @@
     <title>SB Admin 2 - Bootstrap Admin Theme</title>
 
     {% load staticfiles %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/sb/css/bootstrap.min.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'css/sb/css/plugins/metisMenu/metisMenu.min.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'css/sb/css/sb-admin-2.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'css/sb/font-awesome-4.1.0/css/font-awesome.min.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'einvoice/sb/css/bootstrap.min.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'einvoice/sb/css/plugins/metisMenu/metisMenu.min.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'einvoice/sb/css/sb-admin-2.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'einvoice/sb/font-awesome-4.1.0/css/font-awesome.min.css' %}" />
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
