--- a/templates/einvoice/base_register-staff.html
+++ b/templates/einvoice/base_register-staff.html
@@ -1,4 +1,5 @@
 {% extends "einvoice/base.html" %}
+{% load einvoice_extras %}
 
 {% block page %}
 <div id="page-wrapper" class="col-md-12">
@@ -61,6 +62,16 @@
                                 </div>
                             </div>
                             <div class="col-md-12">
+                                <div class="tree">
+                                    <ul>
+                                        <li>
+                                            <span><i class=""></i>{{ store_tree.name }}</span>
+                                            {% for obj in store_tree.child %}
+                                                {{ obj|get:store_tree.child }}
+                                            {% endfor %}
+                                        </li>
+                                    </ul>
+                                </div>
                                 <div class="tree">
                                     <ul>
                                         <li>
